# mpipe-cpp

./: CMakeLists.txt  install_package.sh  main.cpp  worker_a.hpp  worker_b.hpp
